Grace/tests/gibbs/errors/t105.grace
// ERROR = P1001
method pokerap {
    print "Electrode"
    print "Diglett"
